--- a/pi_game/config.yaml
+++ b/pi_game/config.yaml
@@ -1,9 +1,10 @@
 pins:
     buttons: [16, 5, 17, 22]
     motors: [23, 24, 25, 27]
+    glitch: 30000
 pwm_params:
     freq: 400
     max_dutycycle: 1
-    half_dutycycle: .1
+    half_dutycycle: .5
     min_dutycycle: 0
-    max_time: 10
+    max_time: 3
