--- a/pi_game/config.yaml
+++ b/pi_game/config.yaml
@@ -2,6 +2,7 @@ pins:
     buttons: [16, 5, 17, 22]
     motors: [23, 24, 25, 27]
     glitch: 30000
+    max_num_button_pushes: 3
 pwm_params:
     freq: 400
     max_dutycycle: 1
