--- a/pi_game/config.yaml
+++ b/pi_game/config.yaml
@@ -1,8 +1,8 @@
 pins:
-    buttons: [16, 5, 17, 22]
+    buttons: [16, 5, 17, 22, 26]
     motors: [23, 24, 25, 27]
     glitch: 30000
-    max_num_button_pushes: 3
+    max_num_button_pushes: 4 # this number needs to increase with the number of button inputs
 pwm_params:
     freq: 400
     max_dutycycle: 1
