--- a/pi_game/config.yaml
+++ b/pi_game/config.yaml
@@ -13,4 +13,5 @@ pwm_params:
     max_dutycycle: 1
     half_dutycycle: .5
     min_dutycycle: 0
-    max_time: 10            # time in seconds that will allow the motors to run
+    hold_race_time: 2            # time in seconds that will allow the motors to run
+    time_change_duty: 0.5
