--- a/pi_game/config.yaml
+++ b/pi_game/config.yaml
@@ -8,6 +8,7 @@ pins:
     motors: [23, 24, 25, 27]
     glitch: 30000
     max_num_button_pushes: 0 # this number needs to increase with the number of button inputs
+    debounce_time: 500      # time in ms to ignore furthher edges for 200s for switch bounce handling
 pwm_params:
     freq: 400
     max_dutycycle: 1
